修改日誌查詢結果標題

--- a/DL/DL/Views/DiaryLogNew/Index.cshtml
+++ b/DL/DL/Views/DiaryLogNew/Index.cshtml
@@ -56,10 +56,10 @@
                         @Html.DisplayName("序號")
                     </th>
                     <th>
-                        @Html.DisplayName("時間")
+                        @Html.DisplayName("日期")
                     </th>
                     <th>
-                        @Html.DisplayName("日期")
+                        @Html.DisplayName("星期幾")
                     </th>
                     <th>
                         @Html.DisplayName("工作時數")
