小修改顯示標題

--- a/DL/DL/Views/DiaryLogNew/Detail.cshtml
+++ b/DL/DL/Views/DiaryLogNew/Detail.cshtml
@@ -2,7 +2,7 @@
 @model DiaryLogNewEditVM
 
 @{
-    ViewBag.Title =  Model.UserName + " 的工作日誌";
+    ViewBag.Title = "[日誌 / 明細]";
 }
 
 <script type="text/javascript">
