--- a/DL/DL/Views/DiaryLogNew/JobWeight.cshtml
+++ b/DL/DL/Views/DiaryLogNew/JobWeight.cshtml
@@ -104,7 +104,9 @@
                 var theme = {
                     color: [
                         '#26B99A', '#34495E', '#BDC3C7', '#3498DB',
-                        '#9B59B6', '#8abb6f', '#759c6a', '#bfd3b7'
+                        '#9B59B6', '#8abb6f', '#759c6a', '#bfd3b7',
+                        '#db3445', '#e5fc10', '#6ffc10', '#fc10e5',
+                        '#fb6708', '#fb089c', '#e108fb', '#ad9b22'
                     ],
 
                     title: {
