--- a/DL/DL/Views/Account/Login.cshtml
+++ b/DL/DL/Views/Account/Login.cshtml
@@ -4,12 +4,6 @@
     ViewBag.Title = "登入帳號";
 }
 
-<script>
-    $(function () {
-        $("form").makeValidationInline();
-    });
-</script>
-
 <br />
 <label class="title">@ViewBag.Title</label>
 <hr />
@@ -23,14 +17,14 @@
                 <div class="form-group">
                     @Html.LabelFor(m => m.AccountId, new { @class = "col-md-2 control-label" })
                     <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.AccountId, new { @maxlength = "4",@placeholder ="必填欄位", @class = "form-control" })
+                        @Html.TextBoxFor(m => m.AccountId, new { @maxlength = "4",@placeholder ="請輸入編號", @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.AccountId, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(m => m.Password, new {  @class = "col-md-2 control-label" })
                     <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @maxlength = "8",@placeholder = "必填欄位", @class = "form-control" })
+                        @Html.PasswordFor(m => m.Password, new { @maxlength = "8",@placeholder = "請輸入密碼", @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -45,7 +39,3 @@
     </div>
 
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
