--- a/DL/DL/Views/DiaryLogNew/MasterIndex.cshtml
+++ b/DL/DL/Views/DiaryLogNew/MasterIndex.cshtml
@@ -2,13 +2,16 @@
 @model DiaryLogNewMasterIndexVM
 
 @{
-    ViewBag.Title = "[日誌 / 查詢員工]";
+    ViewBag.Title = "查詢員工";
 }
 
+<div class="row">
+    <ol class="breadcrumb">
+        <li><a href="#"><svg class="glyph stroked home"><use xlink:href="#stroked-home"></use></svg></a></li>
+        <li class="active">@ViewBag.Title</li>
+    </ol>
+</div>
 <br />
-<label class="title">@ViewBag.Title</label>
-<hr />
-
 @using (Html.BeginForm("MasterIndex", "DiaryLogNew", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { id = "diaryLogFrom", @class = "form-inline", role = "form" }))
 {
 
