--- a/DL/DL/Views/User/Delete.cshtml
+++ b/DL/DL/Views/User/Delete.cshtml
@@ -1,13 +1,17 @@
 ﻿@model DL.Web.ViewModels.User.UserDeleteVM
 
 @{
-    ViewBag.Title = "[帳號/刪除]";
+    ViewBag.Title = "帳號刪除";
     ViewBag.SubTitle = "確定刪除該筆資料?";
 }
 
+<div class="row">
+    <ol class="breadcrumb">
+        <li><a href="#"><svg class="glyph stroked home"><use xlink:href="#stroked-home"></use></svg></a></li>
+        <li class="active">@ViewBag.Title</li>
+    </ol>
+</div>
 <br />
-<label class="title">@ViewBag.Title</label>
-<hr />
 <h4><strong>@ViewBag.SubTitle</strong></h4>
 
 <div>
