--- a/DL/DL/Views/User/Edit.cshtml
+++ b/DL/DL/Views/User/Edit.cshtml
@@ -1,20 +1,16 @@
 ﻿@model DL.Web.ViewModels.User.UserEditVM
 
 @{
-    ViewBag.Title = "[帳號 / 編輯]";
+    ViewBag.Title = "帳號編輯";
 }
 
-<script type="text/javascript">
-
-    $(document).ready(function () {
-            $("form").makeValidationInline();
-    });
-
-</script>
-
+<div class="row">
+    <ol class="breadcrumb">
+        <li><a href="#"><svg class="glyph stroked home"><use xlink:href="#stroked-home"></use></svg></a></li>
+        <li class="active">@ViewBag.Title</li>
+    </ol>
+</div>
 <br />
-<label class="title">@ViewBag.Title</label>
-<hr />
 
 @using (Html.BeginForm())
 {
@@ -89,3 +85,4 @@
     @Html.ActionLink("返回列表", "Index", null, new { @class = "btn btn-default" })
 </div>
 }
+
