--- a/DL/DL/Views/User/EditSuccess.cshtml
+++ b/DL/DL/Views/User/EditSuccess.cshtml
@@ -1,13 +1,9 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-@{
     ViewBag.Title = "資料修改成功";
 }
 
 <br />
-<label class="title">@ViewBag.Title</label>
+<label class="title" style="color:red">@ViewBag.Title</label>
 
 
 
