--- a/DL/DL/Views/User/Index.cshtml
+++ b/DL/DL/Views/User/Index.cshtml
@@ -2,13 +2,17 @@
 @model UserIndexVM
 
 @{
-    ViewBag.Title = "[帳號 / 查詢]";
+    ViewBag.Title = "帳號查詢";
     ViewBag.SubTitle = "輸入查詢條件";
 }
 
+<div class="row">
+    <ol class="breadcrumb">
+        <li><a href="#"><svg class="glyph stroked home"><use xlink:href="#stroked-home"></use></svg></a></li>
+        <li class="active">@ViewBag.Title</li>
+    </ol>
+</div>
 <br />
-<label class="title">@ViewBag.Title</label>
-<hr />
 <h4><strong>@ViewBag.SubTitle</strong></h4>
 
 @using (Html.BeginForm("Index", "User", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { id = "userFrom", @class = "form-inline", role = "form" }))
@@ -100,7 +104,6 @@
                     }
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
     <script>
         $(function () {
             // Fields
