--- a/DL/DL/Views/Shared/_Layout.cshtml
+++ b/DL/DL/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#"><span style="font-weight:bold">工作日誌</span>系統</a>
+                <a class="navbar-brand" href="#" style="font-weight:bold"><span >工作日誌</span>系統</a>
                 @Html.Partial("_UserMenu")
             </div>
         </div>
