--- a/DL/DL/Content/bootstrap.css
+++ b/DL/DL/Content/bootstrap.css
@@ -4715,7 +4715,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   content: "/\00a0";
 }
 .breadcrumb > .active {
-  color: #777;
+      color: #30a5ff;
+    font-weight: bold;
 }
 .pagination {
   display: inline-block;
