--- a/DL/DL/Views/Shared/_Layout.cshtml
+++ b/DL/DL/Views/Shared/_Layout.cshtml
@@ -10,17 +10,16 @@
     <script src="js/respond.min.js"></script>
     <![endif]-->
     @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryui")
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/jqueryval")
+    @Styles.Render("~/Content/thirdpartycss")
 </head>
 
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#" style="font-weight:bold"><span >工作日誌</span>系統</a>
+                <a class="navbar-brand" href="#" style="font-weight:bold;font-size:21px"><span >工作日誌</span>系統</a>
                 @Html.Partial("_UserMenu")
             </div>
         </div>
@@ -36,6 +35,7 @@
             <p>&copy; @DateTime.Now.Year - 工作日誌系統</p>
         </footer>
     </div>	<!--/.main-->
+    @Scripts.Render("~/bundles/thirdpartyjs")
     @RenderSection("scripts", required: false)
 </body>
 
